EUI-1277 done both emails and refactored whole scenario to fit the spec
