# server/api/controllers/emails/router.ts
@@ -1,5 +1,0 @@
-import express from 'express';
-import controller from './controller'
-export default express.Router({ mergeParams: true })
-    .post('/sendConfirmationRequest', controller.sendConfirmationRequest)
-    .post('/sendConfirmComplete', controller.sendConfirmComplete);
