# server/routes.ts
@@ -1,8 +1,6 @@
 import { Application } from 'express';
-import examplesRouter from './api/controllers/examples/router';
-import emailsRouter from './api/controllers/emails/router';
+import noaRouter from './api/controllers/noa/router';
 
 export default function routes(app: Application): void {
-  app.use('/api/v1/examples', examplesRouter);
-  app.use('/api/v1/emails', emailsRouter);
+  app.use('/api/v1/noa', noaRouter);
 };
